# stock-rookie

./: .gitignore  API.md  API_ENDPOINTS_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  INDUSTRY_ANALYSIS_SUMMARY.md  LICENSE  MIGRATION.md  PROJECT_SUMMARY.md  README.md  alembic.ini  bk_scoring_example.json  check_api_status.py  cors_config.py  data_fetcher.py  demo_api.py  demo_data.py  demo_scoring.py  deploy.sh  docker-compose.yml  env.example  example_request.json  financial_analysis.py  generate_industry_report.py  industry_analysis_report.json  industry_templates.yaml  industry_templates_updated.yaml  lambda_handler.py  main.py  pyproject.toml  requirements.txt  scoring.py  setup_dev_schema.py  simple_example.json  start_server.py  test_optimized.py  test_scoring.py
app/: __init__.py  main.py
app/api/: routes_catalog.py  routes_ingest.py  routes_scoring.py
app/config/: bk.json
app/core/: config.py  decision.py  logging.py  rate_limit.py  retries.py  scoring.py  timeutil.py
app/data/: fmp_adapter.py  indicator_catalog_loader.py  ingest_service.py  mapping.py  repositories.py
app/db/: base.py  models.py
app/db/migrations/: env.py
app/jobs/: __init__.py  scheduler.py
app/schemas/: catalog.py  ingest.py
app/static/: indicator_catalog_core.csv
tests/: test_catalog_loader.py  test_mapping.py
